@@ -49,7 +49,6 @@ import jdk.internal.foreign.layout.ValueLayouts;
 import jdk.internal.javac.PreviewFeature;
 import jdk.internal.misc.ScopedMemoryAccess;
 import jdk.internal.reflect.CallerSensitive;
-import jdk.internal.reflect.Reflection;
 import jdk.internal.vm.annotation.ForceInline;
 
 /**
@@ -63,10 +62,10 @@ import jdk.internal.vm.annotation.ForceInline;
  * Heap segments can be obtained by calling one of the {@link MemorySegment#ofArray(int[])} factory methods.
  * These methods return a memory segment backed by the on-heap region that holds the specified Java array.
  * <p>
- * Native segments can be obtained by calling one of the {@link MemorySegment#allocateNative(long, long, SegmentScope)}
- * factory methods, which return a memory segment backed by a newly allocated off-heap region with the given size
+ * Native segments can be obtained by calling one of the {@link NativeAllocator#allocate(long, long)}
+ * methods, which return a memory segment backed by a newly allocated off-heap region with the given size
  * and aligned to the given alignment constraint. Alternatively, native segments can be obtained by
- * {@link FileChannel#map(MapMode, long, long, SegmentScope) mapping} a file into a new off-heap region
+ * {@link FileChannel#map(MapMode, long, long, NativeAllocator) mapping} a file into a new off-heap region
  * (in some systems, this operation is sometimes referred to as {@code mmap}).
  * Segments obtained in this way are called <em>mapped</em> segments, and their contents can be {@linkplain #force() persisted} and
  * {@linkplain #load() loaded} to and from the underlying memory-mapped file.
@@ -91,23 +90,30 @@ import jdk.internal.vm.annotation.ForceInline;
  * Every memory segment has a {@linkplain #byteSize() size}. The size of a heap segment is derived from the Java array
  * from which it is obtained. This size is predictable across Java runtimes.
  * The size of a native segment is either passed explicitly
- * (as in {@link MemorySegment#allocateNative(long, SegmentScope)}) or derived from a {@link MemoryLayout}
- * (as in {@link MemorySegment#allocateNative(MemoryLayout, SegmentScope)}). The size of a memory segment is typically
+ * (as in {@link NativeAllocator#allocate(long)}) or derived from a {@link MemoryLayout}
+ * (as in {@link NativeAllocator#allocate(MemoryLayout)}). The size of a memory segment is typically
  * a positive number but may be <a href="#wrapping-addresses">zero</a>, but never negative.
  * <p>
  * The address and size of a memory segment jointly ensure that access operations on the segment cannot fall
  * <em>outside</em> the boundaries of the region of memory which backs the segment.
  * That is, a memory segment has <em>spatial bounds</em>.
  * <p>
- * Every memory segment is associated with a {@linkplain SegmentScope scope}. This ensures that access operations
+ * Every memory segment has a <em>lifetime</em>. This ensures that access operations
  * on a memory segment cannot occur when the region of memory which backs the memory segment is no longer available
- * (e.g., after the scope associated with the accessed memory segment is no longer {@linkplain SegmentScope#isAlive() alive}).
- * That is, a memory segment has <em>temporal bounds</em>.
+ * (e.g., after the accessed memory segment is no longer {@linkplain #isAlive() alive}).
+ * That is, a memory segment has <em>temporal bounds</em>. Heap segments feature trivial temporal bounds. That is,
+ * an heap segment is considered to be always alive. Conversely, the temporal bounds of a native segment is determined
+ * by the native allocator used to obtain it. For instance, native segments allocated by the
+ * {@linkplain NativeAllocator#global() global allocator} are always alive. Native segments allocated using an
+ * {@linkplain Arena arena allocator} are alive (and accessible) until the arena is {@linkplain Arena#close() closed}.
  * <p>
- * Finally, access operations on a memory segment are subject to the thread-confinement checks enforced by the associated
- * scope; that is, if the segment is associated with the {@linkplain SegmentScope#global() global scope} or an {@linkplain SegmentScope#auto() automatic scope},
- * it can be accessed by multiple threads. If the segment is associated with an arena scope, then it can only be
- * accessed compatibly with the <a href="Arena.html#thread-confinement">arena confinement characteristics</a>.
+ * Finally, access operations on memory segments can be {@linkplain #isAccessibleBy(Thread) restricted} to specific threads.
+ * Heap segments can always be accessed by any thread. Conversely, access to native segments is subject to the
+ * {@linkplain NativeAllocator#isAccessibleBy(Thread) thread-confinement checks} enforced by the native allocator used to obtain them.
+ * That is, if a native segment has been obtained from the {@linkplain NativeAllocator#global() global} or
+ * the {@linkplain NativeAllocator#auto() automatic} allocator, it can be accessed by any threads. If a native segment has
+ * been obtained from an {@link Arena}, then it can only be accessed compatibly with the
+ * <a href="Arena.html#thread-confinement">arena confinement characteristics</a>.
  *
  * <h2 id="segment-deref">Accessing memory segments</h2>
  *
@@ -172,13 +178,13 @@ import jdk.internal.vm.annotation.ForceInline;
  * The above code creates a native segment that is 100 bytes long; then, it creates a slice that starts at offset 50
  * of {@code segment}, and is 10 bytes long. That is, the address of the {@code slice} is {@code segment.address() + 50},
  * and its size is 10. As a result, attempting to read an int value at offset 20 of the
- * {@code slice} segment will result in an exception. The {@linkplain SegmentScope temporal bounds} of the original segment
- * is inherited by its slices; that is, when the scope associated with {@code segment} is no longer {@linkplain SegmentScope#isAlive() alive},
+ * {@code slice} segment will result in an exception. The {@linkplain NativeAllocator temporal bounds} of the original segment
+ * is inherited by its slices; that is, when {@code segment} is no longer {@linkplain #isAlive() alive},
  * {@code slice} will also be become inaccessible.
  * <p>
  * A client might obtain a {@link Stream} from a segment, which can then be used to slice the segment (according to a given
  * element layout) and even allow multiple threads to work in parallel on disjoint segment slices
- * (to do this, the segment has to be associated with a scope that allows {@linkplain SegmentScope#isAccessibleBy(Thread) access}
+ * (to do this, the segment has allow {@linkplain #isAccessibleBy(Thread) access}
  * from multiple threads). The following code can be used to sum all int values in a memory segment in parallel:
  *
  * {@snippet lang = java:
@@ -241,8 +247,8 @@ import jdk.internal.vm.annotation.ForceInline;
  * <p>
  * The alignment constraint used to access a segment is typically dictated by the shape of the data structure stored
  * in the segment. For example, if the programmer wishes to store a sequence of 8-byte values in a native segment, then
- * the segment should be allocated by specifying a 8-byte alignment constraint, either via {@link #allocateNative(long, long, SegmentScope)}
- * or {@link #allocateNative(MemoryLayout, SegmentScope)}. These factories ensure that the off-heap region of memory backing
+ * the segment should be allocated by specifying a 8-byte alignment constraint, either via {@link NativeAllocator#allocate(long, long)}
+ * or {@link NativeAllocator#allocate(MemoryLayout)}. These factories ensure that the off-heap region of memory backing
  * the returned segment has a starting address that is 8-byte aligned. Subsequently, the programmer can access the
  * segment at the offsets of interest -- 0, 8, 16, 24, etc -- in the knowledge that every such access is aligned.
  * <p>
@@ -354,42 +360,33 @@ import jdk.internal.vm.annotation.ForceInline;
  * of memory whose size is not known, any access operations involving these segments cannot be validated.
  * In effect, a zero-length memory segment <em>wraps</em> an address, and it cannot be used without explicit intent.
  * <p>
- * Zero-length memory segments obtained when interacting with foreign functions are associated with the
- * {@link SegmentScope#global() global scope}. This is because the Java runtime, in addition to having no insight
+ * Zero-length memory segments obtained when interacting with foreign functions are always alive.
+ * This is because the Java runtime, in addition to having no insight
  * into the size of the region of memory backing a pointer returned from a foreign function, also has no insight
- * into the lifetime intended for said region of memory by the foreign function that allocated it. The global scope
- * ensures that the obtained segment can be passed, opaquely, to other pointer-accepting foreign functions.
+ * into the lifetime intended for said region of memory by the foreign function that allocated it.
  * <p>
- * To access native zero-length memory segments, clients have two options, both of which are <em>unsafe</em>. Clients
- * can {@linkplain java.lang.foreign.MemorySegment#ofAddress(long, long, SegmentScope) obtain}
- * a <em>new</em> native segment, with new spatial and temporal bounds, as follows:
+ * To access native zero-length memory segments, clients can
+ * {@linkplain java.lang.foreign.NativeAllocator#wrap(long, Runnable) obtain} a <em>new</em> native segment,
+ * with new temporal and spatial bounds, as follows:
  *
  * {@snippet lang = java:
- * SegmentScope scope = ... // obtains a scope
- * MemorySegment foreign = someSegment.get(ValueLayout.ADDRESS, 0); // wrap address into segment (size = 0)
- * MemorySegment segment = MemorySegment.ofAddress(foreign.address(), 4, scope); // create new segment (size = 4)
+ * NativeAllocator allocator = ... // obtains an allocator
+ * MemorySegment foreign = someSegment.get(ValueLayout.ADDRESS, 0);
+ * MemorySegment segment = allocator.wrap(foreign.address(), null) // wrap address into segment (size = 0)
+ *                              .asUnboundedSlice(0, 4); // unsafe resize (size = 4)
  * int x = segment.get(ValueLayout.JAVA_INT, 0); //ok
  *}
  *
- * Alternatively, clients can obtain an {@linkplain java.lang.foreign.ValueLayout.OfAddress#asUnbounded() unbounded}
- * address value layout. When an access operation, or a function descriptor that is passed to a downcall method handle,
- * uses an unbounded address value layouts, the runtime will wrap any corresponding raw addresses with native segments
- * with <em>maximal</em> size (i.e. {@linkplain java.lang.Long#MAX_VALUE}). As such, these segments can be accessed directly, as follows:
- *
- * {@snippet lang = java:
- * MemorySegment foreign = someSegment.get(ValueLayout.ADDRESS.asUnbounded(), 0); // wrap address into segment (size = Long.MAX_VALUE)
- * int x = foreign.get(ValueLayout.JAVA_INT, 0); //ok
- *}
- *
- * Both {@link #ofAddress(long, long, SegmentScope)} and {@link ValueLayout.OfAddress#asUnbounded()} are
- * <a href="package-summary.html#restricted"><em>restricted</em></a> methods, and should be used with caution:
- * for instance, sizing a segment incorrectly could result in a VM crash when attempting to access the memory segment.
+ * {@link MemorySegment#asUnboundedSlice(long, long)} is a <a href="package-summary.html#restricted"><em>restricted</em></a> method,
+ * and should be used with caution: for instance, sizing a segment incorrectly could result in a VM crash when attempting
+ * to access the memory segment.
  * <p>
- * Which approach is taken largely depends on the information that a client has available when obtaining a memory segment
- * wrapping a native pointer. For instance, if such pointer points to a C struct, the client might prefer to resize the
- * segment unsafely, to match the size of the struct (so that out-of-bounds access will be detected by the API).
+ * Which size is ultimately attached to the zero-length segment depends on the information that a client has available
+ * when obtaining a memory segment wrapping a native pointer. For instance, if such pointer points to a C struct,
+ * the client might prefer to resize the segment to match the size of the struct (so that out-of-bounds access will be detected by the API).
  * In other instances, however, there will be no, or little information as to what spatial and/or temporal bounds should
- * be associated with a given native pointer. In these cases using an unbounded address layout might be preferable.
+ * be associated with a given native pointer. In these cases obtaining a memory segment with
+ * {@linkplain #asUnboundedSlice() maximal size} might be preferable.
  *
  * @implSpec
  * Implementations of this interface are immutable, thread-safe and <a href="{@docRoot}/java.base/java/lang/doc-files/ValueBased.html">value-based</a>.
@@ -418,7 +415,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * if the supplied layout has size N, then calling {@link Spliterator#trySplit()} will result in a spliterator serving
      * approximately {@code S/N} elements (depending on whether N is even or not), where {@code S} is the size of
      * this segment. As such, splitting is possible as long as {@code S/N >= 2}. The spliterator returns segments that
-     * are associated with the same scope as that associated with this segment.
+     * have the same lifetime as this segment.
      * <p>
      * The returned spliterator effectively allows to slice this segment into disjoint {@linkplain #asSlice(long, long) slices},
      * which can then be processed in parallel by multiple threads.
@@ -449,9 +446,31 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
     Stream<MemorySegment> elements(MemoryLayout elementLayout);
 
     /**
-     * {@return the scope associated with this memory segment}
+     * Returns {@code true}, if this segment is alive. Heap segments are always alive. Whether a native segment is
+     * alive depends on the native allocator used to obtain that segment.
+     * @return {@code true}, if this segment is alive.
+     * @see NativeAllocator#isAlive()
      */
-    SegmentScope scope();
+    boolean isAlive();
+
+    /**
+     * Returns {@code true}, if the provided segment can access this segment. Heap segments can be accessed by any thread.
+     * Whether a native segment is accessible by a given thread depends on the native allocator used to obtain that segment.
+     *
+     * @param thread the thread to be tested.
+     * @return {@code true}, if the provided segment can access this segment.
+     * @see NativeAllocator#isAccessibleBy(Thread)
+     */
+    boolean isAccessibleBy(Thread thread);
+
+    /**
+     * Runs a critical action while this segment is kept alive.
+     * @param action the action to be run.
+     * @throws IllegalStateException if this segment is not {@linkplain MemorySegment#isAlive() alive}.
+     * @throws WrongThreadException if this method is called from a thread {@code T},
+     * such that {@code isAccessibleBy(T) == false}.
+     */
+    void whileAlive(Runnable action);
 
     /**
      * {@return the size (in bytes) of this memory segment}
@@ -506,7 +525,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Returns {@code true} if this segment is a native segment. A native segment is
-     * created e.g. using the {@link #allocateNative(long, SegmentScope)} (and related) factory, or by
+     * created e.g. using the {@link NativeAllocator#allocate(long)} (and related) factory, or by
      * {@linkplain #ofBuffer(Buffer) wrapping} a {@linkplain ByteBuffer#allocateDirect(int) direct buffer}.
      * @return {@code true} if this segment is native segment.
      */
@@ -514,7 +533,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Returns {@code true} if this segment is a mapped segment. A mapped memory segment is created e.g. using the
-     * {@link FileChannel#map(FileChannel.MapMode, long, long, SegmentScope)} factory, or by
+     * {@link FileChannel#map(FileChannel.MapMode, long, long, NativeAllocator)} factory, or by
      * {@linkplain #ofBuffer(Buffer) wrapping} a {@linkplain java.nio.MappedByteBuffer mapped byte buffer}.
      * @return {@code true} if this segment is a mapped segment.
      */
@@ -580,10 +599,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *
      * @param value the value to fill into this segment
      * @return this memory segment
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is read-only (see {@link #isReadOnly()}).
      */
     MemorySegment fill(byte value);
@@ -599,14 +617,12 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * }
      * @param src the source segment.
      * @throws IndexOutOfBoundsException if {@code src.byteSize() > this.byteSize()}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code src} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * such that {@code isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if  {@code src} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code src.scope().isAccessibleBy(T) == false}.
+     * such that {@code src.isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is read-only (see {@link #isReadOnly()}).
      * @return this segment.
      */
@@ -633,14 +649,12 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param other the segment to be tested for a mismatch with this segment
      * @return the relative offset, in bytes, of the first mismatch between this
      * and the given other segment, otherwise -1 if no mismatch
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code other} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * such that {@code isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if  {@code other} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code other.scope().isAccessibleBy(T) == false}.
+     * such that {@code other.isAccessibleBy(T) == false}.
      */
     default long mismatch(MemorySegment other) {
         Objects.requireNonNull(other);
@@ -665,10 +679,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @return  {@code true} if it is likely that the contents of this segment
      *          is resident in physical memory
      *
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      */
@@ -682,10 +695,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * method may cause some number of page faults and I/O operations to
      * occur. </p>
      *
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      */
@@ -699,10 +711,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * after invoking this method may cause some number of page faults and I/O operations to
      * occur (as this segment's contents might need to be paged back in). </p>
      *
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      */
@@ -728,10 +739,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * implementation-specific mapping modes.
      * </p>
      *
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws UnsupportedOperationException if this segment is not a mapped memory segment, e.g. if
      * {@code isMapped() == false}.
      * @throws UncheckedIOException if there is an I/O error writing the contents of this segment to the associated storage device
@@ -751,11 +761,11 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * returned if this segment' size is greater than {@link Integer#MAX_VALUE}.
      * <p>
      * The life-cycle of the returned buffer will be tied to that of this segment. That is, accessing the returned buffer
-     * after the scope associated with this segment is no longer {@linkplain SegmentScope#isAlive() alive}, will
+     * after this segment is no longer {@linkplain #isAlive() alive}, will
      * throw an {@link IllegalStateException}. Similarly, accessing the returned buffer from a thread {@code T}
-     * such that {@code scope().isAccessible(T) == false} will throw a {@link WrongThreadException}.
+     * such that {@code isAccessible(T) == false} will throw a {@link WrongThreadException}.
      * <p>
-     * If this segment is associated with a scope that can only be accessed from a single thread, calling read/write I/O
+     * If this segment can only be accessed from a single thread, calling read/write I/O
      * operations on the resulting buffer might result in an unspecified exception being thrown. Examples of such problematic operations are
      * {@link java.nio.channels.AsynchronousSocketChannel#read(ByteBuffer)} and
      * {@link java.nio.channels.AsynchronousSocketChannel#write(ByteBuffer)}.
@@ -775,10 +785,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new byte array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code byte[]} instance,
      * e.g. its size is greater than {@link Integer#MAX_VALUE}.
      */
@@ -789,10 +798,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new short array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code short[]} instance,
      * e.g. because {@code byteSize() % 2 != 0}, or {@code byteSize() / 2 > Integer#MAX_VALUE}
      */
@@ -803,10 +811,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new char array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code char[]} instance,
      * e.g. because {@code byteSize() % 2 != 0}, or {@code byteSize() / 2 > Integer#MAX_VALUE}.
      */
@@ -817,10 +824,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new int array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code int[]} instance,
      * e.g. because {@code byteSize() % 4 != 0}, or {@code byteSize() / 4 > Integer#MAX_VALUE}.
      */
@@ -831,10 +837,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new float array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code float[]} instance,
      * e.g. because {@code byteSize() % 4 != 0}, or {@code byteSize() / 4 > Integer#MAX_VALUE}.
      */
@@ -845,10 +850,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new long array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code long[]} instance,
      * e.g. because {@code byteSize() % 8 != 0}, or {@code byteSize() / 8 > Integer#MAX_VALUE}.
      */
@@ -859,10 +863,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param elementLayout the source element layout. If the byte order associated with the layout is
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @return a new double array whose contents are copied from this memory segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalStateException if this segment's contents cannot be copied into a {@code double[]} instance,
      * e.g. because {@code byteSize() % 8 != 0}, or {@code byteSize() / 8 > Integer#MAX_VALUE}.
      */
@@ -881,10 +884,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @throws IllegalArgumentException if the size of the UTF-8 string is greater than the largest string supported by the platform.
      * @throws IndexOutOfBoundsException if {@code offset < 0} or {@code S + offset > byteSize()}, where {@code S} is the size of the UTF-8
      * string (including the terminator character).
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      */
     default String getUtf8String(long offset) {
         return SharedUtils.toJavaStringInternal(this, offset);
@@ -906,10 +908,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      *               the final address of this write operation can be expressed as {@code address() + offset}.
      * @param str the Java string to be written into this segment.
      * @throws IndexOutOfBoundsException if {@code offset < 0} or {@code str.getBytes().length() + offset >= byteSize()}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      */
     default void setUtf8String(long offset, String str) {
         Utils.toCString(str.getBytes(StandardCharsets.UTF_8), SegmentAllocator.prefixAllocator(asSlice(offset)));
@@ -924,14 +925,14 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * {@linkplain ByteBuffer#isReadOnly() read-only}. Moreover, if the buffer is a {@linkplain Buffer#isDirect() direct buffer},
      * the returned segment is a native segment; otherwise the returned memory segment is a heap segment.
      * <p>
-     * The scope {@code S} associated with the returned segment is computed as follows:
+     * The lifetime of the returned segment depends on the characteristics of the provided buffer {@code B}:
      * <ul>
-     *     <li>if the buffer has been obtained by calling {@link #asByteBuffer()} on a memory segment whose scope
-     *     is {@code S'}, then {@code S = S'}; or</li>
-     *     <li>if the buffer is a heap buffer, then {@code S} is the {@linkplain SegmentScope#global() global scope}; or
-     *     <li>if the buffer is a direct buffer, then {@code S} is a scope that is always alive and which keeps the buffer reachable.
-     *     Therefore, the off-heap region of memory backing the buffer instance will remain available as long as the
-     *     returned segment is reachable.</li>
+     * <li>If {@code B} has been obtained by calling {@link #asByteBuffer()} on a memory segment {@code S}, then
+     * the returned segment has the same lifetime as {@code S};</li>
+     * <li>If {@code B} is a heap buffer, then the returned segment is always alive;
+     * <li>Otherwise, if {@code B} is a direct buffer, the returned segment is always alive and keeps the buffer reachable.
+     * Therefore, the off-heap region of memory backing the buffer instance will remain available as long as the
+     * returned segment is reachable.</li>
      * </ul>
      *
      * @param buffer the buffer instance to be turned into a new memory segment.
@@ -947,8 +948,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given byte array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param byteArray the primitive array backing the heap memory segment.
      * @return a heap memory segment backed by a byte array.
@@ -959,8 +959,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given char array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param charArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a char array.
@@ -971,8 +970,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given short array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param shortArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a short array.
@@ -983,8 +981,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given int array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param intArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by an int array.
@@ -995,8 +992,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given float array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param floatArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a float array.
@@ -1007,8 +1003,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given long array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param longArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a long array.
@@ -1019,8 +1014,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Creates a heap segment backed by the on-heap region of memory that holds the given double array.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}, and
-     * its {@link #address()} is set to zero.
+     * The returned segment is always alive, and its {@link #address()} is set to zero.
      *
      * @param doubleArray the primitive array backing the heap segment.
      * @return a heap memory segment backed by a double array.
@@ -1035,221 +1029,48 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
     MemorySegment NULL = NativeMemorySegmentImpl.makeNativeSegmentUnchecked(0L, 0);
 
     /**
-     * Creates a zero-length native segment from the given {@linkplain #address() address value}.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}.
-     * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang = java:
-     * ofAddress(address, 0);
-     *}
-     * @param address the address of the returned native segment.
-     * @return a zero-length native segment with the given address.
-     */
-    static MemorySegment ofAddress(long address) {
-        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, 0);
-    }
-
-    /**
-     * Creates a native segment with the given size and {@linkplain #address() address value}.
-     * The returned segment is associated with the {@linkplain SegmentScope#global() global scope}.
-     * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang = java:
-     * ofAddress(address, byteSize, SegmentScope.global());
-     *}
-     * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
-     * Restricted methods are unsafe, and, if used incorrectly, their use might crash
-     * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
-     * restricted methods, and use safe and supported functionalities, where possible.
-     * @param address the address of the returned native segment.
-     * @param byteSize the size (in bytes) of the returned native segment.
-     * @return a zero-length native segment with the given address and size.
-     * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
-     */
-    @CallerSensitive
-    static MemorySegment ofAddress(long address, long byteSize) {
-        Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        return MemorySegment.ofAddress(address, byteSize, SegmentScope.global());
-    }
-
-    /**
-     * Creates a native segment with the given size, address, and scope.
-     * This method can be useful when interacting with custom memory sources (e.g. custom allocators),
-     * where an address to some underlying region of memory is typically obtained from foreign code
-     * (often as a plain {@code long} value).
-     * <p>
-     * The returned segment is not read-only (see {@link MemorySegment#isReadOnly()}), and is associated with the
-     * provided scope.
-     * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang = java:
-     * ofAddress(address, byteSize, scope, null);
-     *}
-     * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
-     * Restricted methods are unsafe, and, if used incorrectly, their use might crash
-     * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
-     * restricted methods, and use safe and supported functionalities, where possible.
-     * @param address the returned segment's address.
-     * @param byteSize the desired size.
-     * @param scope the scope associated with the returned native segment.
-     * @return a native segment with the given address, size and scope.
-     * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
-     */
-    @CallerSensitive
-    @ForceInline
-    static MemorySegment ofAddress(long address, long byteSize, SegmentScope scope) {
-        Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        Objects.requireNonNull(scope);
-        Utils.checkAllocationSizeAndAlign(byteSize, 1);
-        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, byteSize, scope, null);
-    }
-
-    /**
-     * Creates a native segment with the given size, address, and scope.
-     * This method can be useful when interacting with custom memory sources (e.g. custom allocators),
-     * where an address to some underlying region of memory is typically obtained from foreign code
-     * (often as a plain {@code long} value).
-     * <p>
-     * The returned segment is not read-only (see {@link MemorySegment#isReadOnly()}), and is associated with the
-     * provided scope.
-     * <p>
-     * The provided cleanup action (if any) will be invoked when the scope becomes not {@linkplain SegmentScope#isAlive() alive}.
-     * <p>
-     * Clients should ensure that the address and bounds refer to a valid region of memory that is accessible for reading and,
-     * if appropriate, writing; an attempt to access an invalid address from Java code will either return an arbitrary value,
-     * have no visible effect, or cause an unspecified exception to be thrown.
+     * Returns a slice of this memory segment, at the same offset as this segment, with <em>unbounded</em> size.
+     * That is, the byte size of the returned segment is set to {@linkplain Long#MAX_VALUE}. This method
+     * can be used to resize zero-length memory segments.
      * <p>
      * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
      * Restricted methods are unsafe, and, if used incorrectly, their use might crash
      * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
      * restricted methods, and use safe and supported functionalities, where possible.
      *
-     *
-     * @param address the returned segment's address.
-     * @param byteSize the desired size.
-     * @param scope the scope associated with the returned native segment.
-     * @param cleanupAction the custom cleanup action to be associated to the returned segment (can be null).
-     * @return a native segment with the given address, size and scope.
-     * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
+     * @return a new memory segment with unbounded size.
+     * @throws IllegalCallerException if access to this method occurs from a module {@code M} and the command line option
+     * {@code --enable-native-access} is specified, but does not mention the module name {@code M}, or
+     * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
      */
     @CallerSensitive
-    static MemorySegment ofAddress(long address, long byteSize, SegmentScope scope, Runnable cleanupAction) {
-        Reflection.ensureNativeAccess(Reflection.getCallerClass(), MemorySegment.class, "ofAddress");
-        Objects.requireNonNull(scope);
-        Utils.checkAllocationSizeAndAlign(byteSize, 1);
-        return NativeMemorySegmentImpl.makeNativeSegmentUnchecked(address, byteSize, scope, cleanupAction);
-    }
+    MemorySegment asUnboundedSlice();
 
     /**
-     * Creates a native segment with the given layout and scope.
+     * Returns a slice of this memory segment, at the given offset. The returned segment's address is the address
+     * of this segment plus the given offset; its size is specified by the given argument. Unlike
+     * {@linkplain #asSlice(long, long)}, this method does <em>not</em> perform bound checks and can be used
+     * to resize zero-length memory segments.
      * <p>
-     * The lifetime off-heap region of memory associated with the returned native segment is determined by the
-     * provided scope. The off-heap memory region is deallocated when the scope becomes not
-     * {@linkplain SegmentScope#isAlive() alive}. If the scope has been obtained using an {@link Arena},
-     * clients are responsible for ensuring that the arena is closed when the returned segment is no longer in use
-     * Failure to do so will result in off-heap memory leaks. As an alternative, an {@linkplain SegmentScope#auto() automatic scope}
-     * can be used, allowing the off-heap memory region associated with the returned native segment to be
-     * automatically released some unspecified time after the scope is no longer referenced.
-     * <p>
-     * The {@linkplain #address() address} of the returned memory segment is the starting address of
-     * the newly allocated off-heap region backing the segment. Moreover, the {@linkplain #address() address}
-     * of the returned segment will be aligned according to the alignment constraint of the provided layout.
-     * <p>
-     * This is equivalent to the following code:
+     * Equivalent to the following code:
      * {@snippet lang=java :
-     * allocateNative(layout.bytesSize(), layout.bytesAlignment(), scope);
+     * asUnboundedSlice().asSlice(offset, size);
      * }
      * <p>
-     * The region of off-heap region backing the returned native segment is initialized to zero.
+     * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
+     * Restricted methods are unsafe, and, if used incorrectly, their use might crash
+     * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
+     * restricted methods, and use safe and supported functionalities, where possible.
      *
-     * @param layout the layout of the off-heap memory region backing the native segment.
-     * @param scope the scope associated with the returned native segment.
-     * @return a new native segment.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
+     * @param offset The new segment base offset (relative to the address of this segment), specified in bytes.
+     * @param newSize The new segment size, specified in bytes.
+     * @return a new memory segment with unbounded size.
+     * @throws IllegalCallerException if access to this method occurs from a module {@code M} and the command line option
+     * {@code --enable-native-access} is specified, but does not mention the module name {@code M}, or
+     * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
      */
-    static MemorySegment allocateNative(MemoryLayout layout, SegmentScope scope) {
-        Objects.requireNonNull(layout);
-        Objects.requireNonNull(scope);
-        return allocateNative(layout.byteSize(), layout.byteAlignment(), scope);
-    }
-
-    /**
-     * Creates a native segment with the given size (in bytes) and scope.
-     * <p>
-     * The lifetime off-heap region of memory associated with the returned native segment is determined by the
-     * provided scope. The off-heap memory region is deallocated when the scope becomes not
-     * {@linkplain SegmentScope#isAlive() alive}. If the scope has been obtained using an {@link Arena},
-     * clients are responsible for ensuring that the arena is closed when the returned segment is no longer in use
-     * Failure to do so will result in off-heap memory leaks. As an alternative, an {@linkplain SegmentScope#auto() automatic scope}
-     * can be used, allowing the off-heap memory region associated with the returned native segment to be
-     * automatically released some unspecified time after the scope is no longer referenced.
-     * <p>
-     * The {@linkplain #address() address} of the returned memory segment is the starting address of
-     * the newly allocated off-heap region backing the segment. Moreover, the {@linkplain #address() address}
-     * of the returned segment is guaranteed to be at least 1-byte aligned.
-     * <p>
-     * This is equivalent to the following code:
-     * {@snippet lang=java :
-     * allocateNative(bytesSize, 1, scope);
-     * }
-     * <p>
-     * The region of off-heap region backing the returned native segment is initialized to zero.
-     *
-     * @param byteSize the size (in bytes) of the off-heap memory region of memory backing the native memory segment.
-     * @param scope the scope associated with the returned native segment.
-     * @return a new native memory segment.
-     * @throws IllegalArgumentException if {@code byteSize < 0}.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     */
-    static MemorySegment allocateNative(long byteSize, SegmentScope scope) {
-        return allocateNative(byteSize, 1, scope);
-    }
-
-    /**
-     * Creates a native segment with the given size (in bytes), alignment (in bytes) and scope.
-     * <p>
-     * The lifetime off-heap region of memory associated with the returned native segment is determined by the
-     * provided scope. The off-heap memory region is deallocated when the scope becomes not
-     * {@linkplain SegmentScope#isAlive() alive}. If the scope has been obtained using an {@link Arena},
-     * clients are responsible for ensuring that the arena is closed when the returned segment is no longer in use
-     * Failure to do so will result in off-heap memory leaks. As an alternative, an {@linkplain SegmentScope#auto() automatic scope}
-     * can be used, allowing the off-heap memory region associated with the returned native segment to be
-     * automatically released some unspecified time after the scope is no longer referenced.
-     * <p>
-     * The {@linkplain #address() address} of the returned memory segment is the starting address of
-     * the newly allocated off-heap region backing the segment. Moreover, the {@linkplain #address() address}
-     * of the returned segment will be aligned according to the provided alignment constraint.
-     * <p>
-     * The region of off-heap region backing the returned native segment is initialized to zero.
-     *
-     * @param byteSize the size (in bytes) of the off-heap region of memory backing the native memory segment.
-     * @param byteAlignment the alignment constraint (in bytes) of the off-heap region of memory backing the native memory segment.
-     * @param scope the scope associated with the returned native segment.
-     * @return a new native memory segment.
-     * @throws IllegalArgumentException if {@code byteSize < 0}, {@code byteAlignment <= 0}, or if {@code byteAlignment}
-     *                                  is not a power of 2.
-     * @throws IllegalStateException if {@code scope} is not {@linkplain SegmentScope#isAlive() alive}.
-     * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope.isAccessibleBy(T) == false}.
-     */
-    static MemorySegment allocateNative(long byteSize, long byteAlignment, SegmentScope scope) {
-        Objects.requireNonNull(scope);
-        Utils.checkAllocationSizeAndAlign(byteSize, byteAlignment);
-        return NativeMemorySegmentImpl.makeNativeSegment(byteSize, byteAlignment, scope);
-    }
+    @CallerSensitive
+    MemorySegment asUnboundedSlice(long offset, long newSize);
 
     /**
      * Performs a bulk copy from source segment to destination segment. More specifically, the bytes at offset
@@ -1274,14 +1095,12 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param dstSegment the destination segment.
      * @param dstOffset the starting offset, in bytes, of the destination segment.
      * @param bytes the number of bytes to be copied.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if  {@code srcSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code srcSegment.scope().isAccessibleBy(T) == false}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * such that {@code srcSegment.isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if  {@code dstSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code dstSegment.scope().isAccessibleBy(T) == false}.
+     * such that {@code dstSegment.isAccessibleBy(T) == false}.
      * @throws IndexOutOfBoundsException if {@code srcOffset + bytes > srcSegment.byteSize()} or if
      * {@code dstOffset + bytes > dstSegment.byteSize()}, or if either {@code srcOffset}, {@code dstOffset}
      * or {@code bytes} are {@code < 0}.
@@ -1321,14 +1140,12 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @throws IllegalArgumentException if the element layouts have different sizes, if the source (resp. destination) segment/offset are
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the source
      * (resp. destination) element layout, or if the source (resp. destination) element layout alignment is greater than its size.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if  {@code srcSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code srcSegment().scope().isAccessibleBy(T) == false}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * such that {@code srcSegment().isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if  {@code dstSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code dstSegment().scope().isAccessibleBy(T) == false}.
+     * such that {@code dstSegment().isAccessibleBy(T) == false}.
      * @throws IndexOutOfBoundsException if {@code srcOffset + (elementCount * S) > srcSegment.byteSize()} or if
      * {@code dstOffset + (elementCount * S) > dstSegment.byteSize()}, where {@code S} is the byte size
      * of the element layouts, or if either {@code srcOffset}, {@code dstOffset} or {@code elementCount} are {@code < 0}.
@@ -1374,10 +1191,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a byte value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1394,10 +1210,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the byte value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1415,10 +1230,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a boolean value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1435,10 +1249,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the boolean value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1456,10 +1269,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a char value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1476,10 +1288,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the char value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1497,10 +1308,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a short value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1517,10 +1327,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the short value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1538,10 +1347,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return an int value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1558,10 +1366,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the int value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1579,10 +1386,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a float value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1599,10 +1405,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the float value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1620,10 +1425,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a long value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1640,10 +1444,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the long value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1661,10 +1464,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a double value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1681,10 +1483,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the double value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1698,17 +1499,13 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Reads an address from this segment at the given offset, with the given layout. The read address is wrapped in
-     * a native segment, associated with the {@linkplain SegmentScope#global() global scope}. Under normal conditions,
-     * the size of the returned segment is {@code 0}. However, if the provided layout is an
-     * {@linkplain ValueLayout.OfAddress#asUnbounded() unbounded} address layout, then the size of the returned
-     * segment is {@code Long.MAX_VALUE}.
+     * a native segment that is always alive. Moreover, the size of the returned segment is {@code 0}.
      * @param layout the layout of the region of memory to be read.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @return a native segment wrapping an address read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1725,10 +1522,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param layout the layout of the region of memory to be written.
      * @param offset offset in bytes (relative to this segment address) at which this access operation will occur.
      * @param value the address value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout.
      * @throws IndexOutOfBoundsException when the access operation falls outside the <em>spatial bounds</em> of the
@@ -1748,10 +1544,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a char value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1772,10 +1567,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the char value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1797,10 +1591,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a short value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1821,10 +1614,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the short value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1846,10 +1638,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return an int value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1870,10 +1661,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the int value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1895,10 +1685,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a float value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1919,10 +1708,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the float value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1944,10 +1732,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a long value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1968,10 +1755,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the long value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -1993,10 +1779,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a double value read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2017,10 +1802,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the double value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2037,19 +1821,15 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
 
     /**
      * Reads an address from this segment at the given at the given index, scaled by the given layout size. The read address is wrapped in
-     * a native segment, associated with the {@linkplain SegmentScope#global() global scope}. Under normal conditions,
-     * the size of the returned segment is {@code 0}. However, if the provided layout is an
-     * {@linkplain ValueLayout.OfAddress#asUnbounded() unbounded} address layout, then the size of the returned
-     * segment is {@code Long.MAX_VALUE}.
+     * a native segment that is always alive. Moreover, the size of the returned segment is {@code 0}.
      *
      * @param layout the layout of the region of memory to be read.
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @return a native segment wrapping an address read from this segment.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2070,10 +1850,9 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param index a logical index. The offset in bytes (relative to this segment address) at which the access operation
      *              will occur can be expressed as {@code (index * layout.byteSize())}.
      * @param value the address value to be written.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with this segment is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if this segment is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code scope().isAccessibleBy(T) == false}.
+     * such that {@code isAccessibleBy(T) == false}.
      * @throws IllegalArgumentException if the access operation is
      * <a href="MemorySegment.html#segment-alignment">incompatible with the alignment constraint</a> in the provided layout,
      * or if the layout alignment is greater than its size.
@@ -2132,8 +1911,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param dstArray the destination array.
      * @param dstIndex the starting index of the destination array.
      * @param elementCount the number of array elements to be copied.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if  {@code srcSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
      * such that {@code srcSegment().isAccessibleBy(T) == false}.
      * @throws  IllegalArgumentException if {@code dstArray} is not an array, or if it is an array but whose type is not supported,
@@ -2166,8 +1944,7 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * different from the {@linkplain ByteOrder#nativeOrder native order}, a byte swap operation will be performed on each array element.
      * @param dstOffset the starting offset, in bytes, of the destination segment.
      * @param elementCount the number of array elements to be copied.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if  {@code dstSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
      * such that {@code dstSegment().isAccessibleBy(T) == false}.
      * @throws  IllegalArgumentException if {@code srcArray} is not an array, or if it is an array but whose type is not supported,
@@ -2208,14 +1985,12 @@ public sealed interface MemorySegment permits AbstractMemorySegmentImpl {
      * @param dstToOffset the offset (exclusive) of the last byte in the destination segment to be tested.
      * @return the relative offset, in bytes, of the first mismatch between the source and destination segments,
      * otherwise -1 if no mismatch.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code srcSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * @throws IllegalStateException if  {@code srcSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code srcSegment.scope().isAccessibleBy(T) == false}.
-     * @throws IllegalStateException if the {@linkplain #scope() scope} associated with {@code dstSegment} is not
-     * {@linkplain SegmentScope#isAlive() alive}.
+     * such that {@code srcSegment.isAccessibleBy(T) == false}.
+     * @throws IllegalStateException if  {@code dstSegment} is not {@linkplain #isAlive() alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code dstSegment.scope().isAccessibleBy(T) == false}.
+     * such that {@code dstSegment.isAccessibleBy(T) == false}.
      * @throws IndexOutOfBoundsException if {@code srcFromOffset < 0}, {@code srcToOffset < srcFromOffset} or
      * {@code srcToOffset > srcSegment.byteSize()}
      * @throws IndexOutOfBoundsException if {@code dstFromOffset < 0}, {@code dstToOffset < dstFromOffset} or
