@@ -29,7 +29,8 @@ import jdk.internal.foreign.abi.AbstractLinker;
 import jdk.internal.foreign.abi.LinkerOptions;
 import jdk.internal.foreign.abi.aarch64.CallArranger;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
+import java.lang.foreign.NativeAllocator;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.VaList;
@@ -61,18 +62,18 @@ public final class LinuxAArch64Linker extends AbstractLinker {
     }
 
     @Override
-    protected MemorySegment arrangeUpcall(MethodHandle target, MethodType targetType, FunctionDescriptor function, SegmentScope scope) {
+    protected MemorySegment arrangeUpcall(MethodHandle target, MethodType targetType, FunctionDescriptor function, NativeAllocator scope) {
         return CallArranger.LINUX.arrangeUpcall(target, targetType, function, scope);
     }
 
-    public static VaList newVaList(Consumer<VaList.Builder> actions, SegmentScope scope) {
-        LinuxAArch64VaList.Builder builder = LinuxAArch64VaList.builder(scope);
+    public static VaList newVaList(Consumer<VaList.Builder> actions, NativeAllocator allocator) {
+        LinuxAArch64VaList.Builder builder = LinuxAArch64VaList.builder(allocator);
         actions.accept(builder);
         return builder.build();
     }
 
-    public static VaList newVaListOfAddress(long address, SegmentScope scope) {
-        return LinuxAArch64VaList.ofAddress(address, scope);
+    public static VaList newVaListOfAddress(long address, NativeAllocator allocator) {
+        return LinuxAArch64VaList.ofAddress(address, allocator);
     }
 
     public static VaList emptyVaList() {
