@@ -28,8 +28,9 @@
  * @run testng/othervm -Dos.arch=unknown -Dos.name=unknown --enable-native-access=ALL-UNNAMED TestUnsupportedLinker
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.NativeAllocator;
 import java.lang.foreign.VaList;
 import java.lang.foreign.ValueLayout;
 
@@ -49,11 +50,11 @@ public class TestUnsupportedLinker {
 
     @Test(expectedExceptions = UnsupportedOperationException.class)
     public void testNonEmptyVaList() {
-        VaList.make(builder -> builder.addVarg(ValueLayout.JAVA_INT, 42), SegmentScope.auto());
+        VaList.make(builder -> builder.addVarg(ValueLayout.JAVA_INT, 42), Arena.openConfined());
     }
 
     @Test(expectedExceptions = UnsupportedOperationException.class)
     public void testUnsafeVaList() {
-        VaList.ofAddress(0L, SegmentScope.auto());
+        VaList.ofAddress(0L, Arena.openConfined());
     }
 }
